Update: Small changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,18 @@
 {
     "editor.tabSize": 2,
-    "prettier.prettierPath": "./node_modules/prettier"
+    "prettier.prettierPath": "./node_modules/prettier",
+    "cSpell.ignorePaths": [
+        "package-lock.json",
+        "node_modules",
+        "vscode-extension",
+        ".git/objects",
+        ".vscode",
+        ".vscode-insiders",
+        "tsconfig.json",
+        ".eslint*"
+    ],
+    "cSpell.words": [
+        "cooldown",
+        "cooldowns"
+    ]
 }
