Add: Buttons handler & test button
Note: I have no idea why "ButtonBuilder" type does not have "data.custom_id", I'll use "any" for now.

Here's object from console, which clearly shows "custom_id" in ButtonBuilder
```
{
  button: ButtonBuilder {
    data: {
      type: 2,
      emoji: undefined,
      custom_id: 'hello',
      label: 'Hello',
      style: 2
    }
  },
  execute: [Function: execute]
}
```

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,8 @@
         ".vscode",
         ".vscode-insiders",
         "tsconfig.json",
-        ".eslint*"
+        ".eslint*",
+        "package*"
     ],
     "cSpell.words": [
         "cooldown",
