--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "discord.js": "^14.11.0",
-    "dotenv": "^16.2.0"
+    "dotenv": "^16.2.0",
+    "mongoose": "^7.3.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.11",
