Add: Preferred language configuration
Now user can set the languages they speak, it will reduce false-positives and make bot better in general (Probably)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,6 @@
 {
-    "editor.tabSize": 2,
-    "prettier.prettierPath": "./node_modules/prettier",
-    "cSpell.ignorePaths": [
-        "package-lock.json",
-        "node_modules",
-        "vscode-extension",
-        ".git/objects",
-        ".vscode",
-        ".vscode-insiders",
-        "tsconfig.json",
-        ".eslint*",
-        "package*"
-    ],
-    "cSpell.words": [
-        "cooldown",
-        "cooldowns"
-    ]
+  "editor.tabSize": 2,
+  "prettier.prettierPath": "./node_modules/prettier",
+  "cSpell.ignorePaths": ["package-lock.json", "node_modules", "vscode-extension", ".git/objects", ".vscode", ".vscode-insiders", "tsconfig.json", ".eslint*", "package*"],
+  "cSpell.words": ["balear", "cooldown", "cooldowns"]
 }
